--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiogram==3.5.0
 SQLAlchemy==2.0.30
-greenlet==3.0.3
+greenlet==3.1.1
 aiosqlite==0.20.0
 asyncpg==0.29.0
 pydantic-settings==2.2.1
@@ -11,3 +11,5 @@ curl_cffi==0.7.4
 httpx==0.27.0
 playwright==1.52.0
 playwright-stealth==2.0.0
+requests==2.32.3
+toml==0.10.2
